@@ -1,6 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 2.6.5
 Date: ????
+  Bugfixes:
+    - Fixed crash when attempting to take a blueprint with no entities.
   Changes:
 ---------------------------------------------------------------------------------------------------
 Version: 2.6.4
